Done updated DI changes for 3 server